# File-sharing

./: .gitignore  CMakeLists.txt  Makefile
Network/: main.go
platform/src/: main.cpp
